--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(antlr4_SRC
   ${PROJECT_SOURCE_DIR}/symboltable.cpp
   ${PROJECT_SOURCE_DIR}/instructions.cpp
   ${PROJECT_SOURCE_DIR}/trace.cpp
+  ${PROJECT_SOURCE_DIR}/pkt.cpp
   ${antlr4-GENERATED_SRC}
 )
 
